testdata/zkc/invalid/basic_invalid_06.zkc
;;error:3:13-14:braces required
function f(x:u8) -> (r:u8) {
  r = x + x * x
  return
}
